--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -21,5 +21,9 @@
     <string name="nav_instruction_message">Recherchez un artiste pour obtenir une liste de chansons. Si vous souhaitez suivre une chanson, sélectionnez-la avec une longue attente et ajoutez-la à vos favoris. Pour le supprimer, rendez-vous dans la section des favoris et effectuez la même action.</string>
     <string name="toolbar_about_msg">C\'est l\'activité Deezer, écrite par Michael Daly</string>
     <string name="nav_donate_msg">Combien d\'argent voulez-vous donner?</string>
-    <string name="nav_donate_hint">$$$$</string>
+    <string name="nav_donate_hint">android:layout_alignParentBottom=\"true\"android:layout_alignParentBottom=\"true\"</string>
+    <string name="nav_favorite">Favoris</string>
+    <string name="nav_search">Chercher</string>
+    <string name="nav_header_deezer">Deezer</string>
+    <string name="nav_header_app">Application</string>
 </resources>
