--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="nav_search">Search</string>
     <string name="nav_header_deezer">Deezer</string>
     <string name="nav_header_app">Application</string>
+    <string name="search_hint">Type an artist name and search</string>
+    <string name="search_previous">Previous Search</string>
 </resources>
