--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -28,4 +28,5 @@
     <string name="nav_header_app">Application</string>
     <string name="search_hint">Tapez un nom d\'artiste et recherchez</string>
     <string name="search_previous">Recherche précédente</string>
+    <string name="results_title">Résultats de recherche</string>
 </resources>
