--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="nav_header_app">Application</string>
     <string name="search_hint">Type an artist name and search</string>
     <string name="search_previous">Previous Search</string>
+    <string name="results_title">Search Results</string>
 </resources>
