--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="favourite_addheader">Add to Favourites?</string>
     <string name="favourite_addmsg">Add</string>
     <string name="favourite_addender">to favourites?</string>
+    <string name="results_notfound">No results founds, please return and check your search term</string>
+    <string name="favourite_header">Your Favourites</string>
+    <string name="favourite_exists">This song has already been added to favourites!</string>
 </resources>
